Returned exception message if error

--- a/NetworkCapture/NetworkCapture/NetworkCapture.csproj
+++ b/NetworkCapture/NetworkCapture/NetworkCapture.csproj
@@ -69,6 +69,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ExceptionHandling.cs" />
     <Compile Include="Machine.cs" />
     <Compile Include="MachineActivities.cs" />
     <Compile Include="MainWindow.xaml.cs">
